<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_cv_row_race"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="0dp"
    android:clickable="true"
    android:focusable="true"
    app:strokeColor="@color/colorPrimary"
    app:strokeWidth="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/id_tv_city_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/abbrv_city_code"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/id_tv_race_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_race_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/abbrv_race_code"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/id_gl_race_no"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_race_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/abbrv_race_no"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/id_gl_race_no"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_race_sel0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/abbrv_race_sel"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/id_gl_race_sel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_race_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/abbrv_time"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_race_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/abbrv_date"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_tv_race_time" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/id_gl_race_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="104dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/id_gl_race_sel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="144dp" />

        <TextView
            android:id="@+id/id_tv_race_sel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/abbrv_race_sel"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/id_tv_race_sel0"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_race_sel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/abbrv_race_sel"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/id_tv_race_sel1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_race_sel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/abbrv_race_sel"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/id_tv_race_sel2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_multi"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/multi_selects"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/id_gl_race_sel"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/id_iv_exp_coll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
